--- a/assets/style/base/elements/_fields.scss
+++ b/assets/style/base/elements/_fields.scss
@@ -15,9 +15,8 @@ input[type="datetime-local"],
 input[type="color"],
 textarea {
 	color: $color__text-input;
-	border: 1px solid $color__border-input;
-	border-radius: 3px;
-	padding: 3px;
+	padding: 7px;
+    border: none;
 
 	&:focus {
 		color: $color__text-input-focus;
