--- a/assets/style/components/navigation/_navigation.scss
+++ b/assets/style/components/navigation/_navigation.scss
@@ -13,7 +13,7 @@
 }
 
 .shinka-header__navigation-container {
-	padding: 10px 15px;
+	padding: 15px;
 }
 
 .shinka-header__menu {
@@ -150,6 +150,35 @@
 	}
 }
 
+.shinka-search__wrapper {
+	display: none;
+    position: absolute;
+	top: 100%;
+    left: 0;
+	right: 0;
+    background: #323232;
+    z-index: 99999;
+}
+
+.shinka-search__form {
+	display: flex;
+    padding: 15px;
+}
+
+.shinka-search__field {
+	width: 100%;
+	border-radius: 5px;
+}
+
+.shinka-search__submit {
+	margin-left: 10px;
+	background: $shinka__red;
+	padding: 10px;
+	border: none;
+	border-radius: 5px;
+	overflow: hidden;
+}
+
 @media (min-width: 1200px) {
 	.shinka-header__container {
 		width: 1280px;
@@ -222,5 +251,16 @@
 			margin: 0 10px;
 			padding: 0;
 		}
+	}
+	.shinka-search__wrapper {
+		margin-left: calc(50% - 50vw);
+		margin-right: calc(50% - 50vw);	
+	}
+	.shinka-search__form {
+		width: 1280px;
+		max-width: 1280px;
+		margin: auto;
+		padding-left: 0;
+		padding-right: 0;
 	}
 }
