--- a/assets/style/components/content/_posts-and-pages.scss
+++ b/assets/style/components/content/_posts-and-pages.scss
@@ -121,6 +121,10 @@
 	}
 }
 
+.shinka-archive__timeline-content .shinka-inline-search__wrapper + .shinka-archive__timeline-news {
+	border: none;
+}
+
 .shinka-archive__timeline-news-media {
     display: flex;
     flex: 1;
@@ -566,7 +570,7 @@
 	}
 }
 
-.archive {
+.archive, .search {
 	.shinka-archive__timeline-container {
 		padding: 0;
 	}
@@ -651,6 +655,57 @@
 	margin-bottom: .5em;
 }
 
+.shinka-inline__paragraph {
+	margin-top: 10px;
+}
+
+.shinka-post__review {
+	margin: 0 -15px 20px -15px;
+	background-size: cover;
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
+    position: relative;
+    color: $shinka__white;
+	&::before {
+		content: "";
+		position: absolute;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		width: 100%;
+		height: 100%;
+		background-color: rgba(0, 0, 0, 0.9);
+	}
+}
+
+.shinka-post__review-wrapper {
+	padding: 15px;
+	text-align: center;
+	position: relative;
+}
+
+.shinka-post__review-text {
+	font-size: 16px;
+}
+
+.shinka-post__review-vote-text {
+	margin: 0 !important;
+	font-size: 40px !important;
+	font-weight: 600;
+	color: $shinka__white;
+}
+
+.shinka-post__review-vote {
+	display: inline-flex;
+    border-radius: 50%;
+    width: 100px;
+	height: 100px;
+    font-size: 40px;
+    justify-content: center;
+    align-items: center;
+}
+
 @media (min-width: 1200px) {
 	.shinka-wrapper {
 		margin: auto;
@@ -714,7 +769,6 @@
 	.shinka-archive__timeline-container {
 		display: flex;
 		padding: 0;
-		flex: 0 0 70%;
 	}
 	
 	.shinka-archive__sidebar {
@@ -725,6 +779,7 @@
 	}
 
 	.shinka-archive__timeline-content {
+		flex: 1 0 70%;
 		padding-right: 15px;
 	}
 
@@ -847,7 +902,7 @@
 		padding: 200px;
 	}
 
-	.archive {
+	.archive, .search {
 		.shinka-sidebar {
 			margin-top: 0;
 		}
@@ -870,6 +925,15 @@
 	
 	.shinka-archive__pre-content-text {
 		line-height: 1.7em;
+	}
+
+	.shinka-post__review {
+		margin: 0 0 20px 0;
+	}
+	
+	.shinka-post__review-wrapper {
+		padding: 15px;
+		text-align: center;
 	}
 }
 
