--- a/style.css
+++ b/style.css
@@ -847,6 +847,28 @@ textarea {
 	z-index: 99999;
 }
 
+.shinka-inline-search__wrapper .shinka-search__form {
+	padding: 0;
+}
+
+@media (min-width: 1200px) {
+	.shinka-inline-search__wrapper .shinka-search__form {
+		width: 100%;
+		max-width: 100%;
+	}
+}
+
+.shinka-inline-search__wrapper .shinka-search__field {
+	border: 1px solid #d8d8d8;
+}
+
+.shinka-inline-search__wrapper svg {
+	width: 20px;
+	height: 20px;
+	display: block;
+	fill: #ffffff;
+}
+
 .shinka-search__form {
 	display: flex;
 	padding: 15px;
@@ -864,6 +886,7 @@ textarea {
 	border: none;
 	border-radius: 5px;
 	overflow: hidden;
+	cursor: pointer;
 }
 
 .sub-menu {
@@ -1138,6 +1161,10 @@ textarea {
 
 .shinka-archive__timeline-news:last-of-type {
 	padding-bottom: 0;
+}
+
+.shinka-archive__timeline-content .shinka-inline-search__wrapper + .shinka-archive__timeline-news {
+	border: none;
 }
 
 .shinka-archive__timeline-news-media {
@@ -1613,11 +1640,11 @@ textarea {
 	border-radius: 5px;
 }
 
-.archive .shinka-archive__timeline-container {
+.archive .shinka-archive__timeline-container, .search .shinka-archive__timeline-container {
 	padding: 0;
 }
 
-.archive .shinka-sidebar {
+.archive .shinka-sidebar, .search .shinka-sidebar {
 	margin-top: 20px;
 }
 
@@ -1701,6 +1728,58 @@ textarea {
 	margin-bottom: .5em;
 }
 
+.shinka-inline__paragraph {
+	margin-top: 10px;
+}
+
+.shinka-post__review {
+	margin: 0 -15px 20px -15px;
+	background-size: cover;
+	background-position: 50% 50%;
+	background-repeat: no-repeat;
+	position: relative;
+	color: #ffffff;
+}
+
+.shinka-post__review::before {
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.9);
+}
+
+.shinka-post__review-wrapper {
+	padding: 15px;
+	text-align: center;
+	position: relative;
+}
+
+.shinka-post__review-text {
+	font-size: 16px;
+}
+
+.shinka-post__review-vote-text {
+	margin: 0 !important;
+	font-size: 40px !important;
+	font-weight: 600;
+	color: #ffffff;
+}
+
+.shinka-post__review-vote {
+	display: inline-flex;
+	border-radius: 50%;
+	width: 100px;
+	height: 100px;
+	font-size: 40px;
+	justify-content: center;
+	align-items: center;
+}
+
 @media (min-width: 1200px) {
 	.shinka-wrapper {
 		margin: auto;
@@ -1754,7 +1833,6 @@ textarea {
 	.shinka-archive__timeline-container {
 		display: flex;
 		padding: 0;
-		flex: 0 0 70%;
 	}
 	.shinka-archive__sidebar {
 		margin-top: 0;
@@ -1763,6 +1841,7 @@ textarea {
 		border-left: 1px solid #d8d8d8;
 	}
 	.shinka-archive__timeline-content {
+		flex: 1 0 70%;
 		padding-right: 15px;
 	}
 	.shinka-archive__timeline-news-media {
@@ -1858,7 +1937,7 @@ textarea {
 	.shinka__error-404 {
 		padding: 200px;
 	}
-	.archive .shinka-sidebar {
+	.archive .shinka-sidebar, .search .shinka-sidebar {
 		margin-top: 0;
 	}
 	.shinka-archive__pre-content {
@@ -1875,6 +1954,13 @@ textarea {
 	}
 	.shinka-archive__pre-content-text {
 		line-height: 1.7em;
+	}
+	.shinka-post__review {
+		margin: 0 0 20px 0;
+	}
+	.shinka-post__review-wrapper {
+		padding: 15px;
+		text-align: center;
 	}
 }
 
