--- a/assets/style/base/typography/_typography.scss
+++ b/assets/style/base/typography/_typography.scss
@@ -2,6 +2,7 @@
 	font-family: 'Roboto';
 	font-style: normal;
 	font-weight: 300;
+	font-display: swap;
 	src: url("assets/fonts/roboto-light.woff2") format("woff2"), url("assets/fonts/roboto-light.woff") format("woff"); 
 }
   
@@ -10,8 +11,8 @@
 	font-family: 'Roboto';
 	font-style: normal;
 	font-weight: 400;
+	font-display: swap;
 	src: url("assets/fonts/roboto-regular.woff2") format("woff2"), url("assets/fonts/roboto-regular.woff") format("woff");
-	display: swap;
 }
   
 /* roboto-italic - latin */
@@ -19,8 +20,8 @@
 	font-family: 'Roboto';
 	font-style: italic;
 	font-weight: 400;
+	font-display: swap;
 	src: url("assets/fonts/roboto-italic.woff2") format("woff2"), url("assets/fonts/roboto-italic.woff") format("woff");
-	display: swap; 
 }
   
 /* roboto-700 - latin */
@@ -28,8 +29,8 @@
 	font-family: 'Roboto';
 	font-style: normal;
 	font-weight: 700;
+	font-display: swap;
 	src: url("assets/fonts/roboto-bold.woff2") format("woff2"), url("assets/fonts/roboto-bold.woff") format("woff");
-	display: swap; 
 }
 
 body,
