--- a/assets/style/components/widgets/_widgets.scss
+++ b/assets/style/components/widgets/_widgets.scss
@@ -1,8 +1,6 @@
 .widget {
-	margin: 0 0 1.5em;
-
-	// Make sure select elements fit in widgets.
-	select {
-		max-width: 100%;
+	margin-top: 1em;
+	&:first-of-type {
+		margin: 0;
 	}
 }
